# svelte-fastapi-ws-proxy

fastapi_ws_client/: .env.example  .env.local  .prettierrc  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
fastapi_ws_client/src/: app.d.ts  hooks.server.ts  hooks.websocket.js  websockets.js
fastapi_ws_client/src/lib/client/stores/: security.store.ts  websocket.store.ts
fastapi_ws_client/src/lib/client/tools/api-proxy/: api-proxy.tools.ts
fastapi_ws_client/src/lib/client/tools/websocket/: websocket.message.d.ts  websocket.tools.ts  websockets-middleman.js
fastapi_ws_client/src/lib/middleware/: websocket.tools.ts
fastapi_ws_client/src/lib/server/: api-proxy.handle.ts  logger.ts
fastapi_ws_client/src/lib/stores/: websocket.store.ts
fastapi_ws_client/src/lib/tools/api-proxy/: api-proxy.tools.ts
fastapi_ws_client/src/lib/tools/websocket/: websocket.message.d.ts  websocket.tools.ts  websockets-middleman.js
fastapi_ws_client/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
fastapi_ws_server/: pyproject.toml
fastapi_ws_server/fastapi_ws/: __init__.py  connectionmanager.py  routes.py
